--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>I'am Dila.</h1>
       <h2>a newbie programmer.</h2>
-      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
       <img src="Images/mountain.png" alt="cloud-img">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="tree"src="Images/Pngtree.png" alt="PngTree-img">
+        <img class="tree"src="Pngtree.png" alt="PngTree-img">
         <h2>Hello.</h2>
         <p class="intro">My name is Dila. I am learning how to code and many more other things. I love coffee and my cat</p>
       </div>
@@ -27,12 +27,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="croco" src="Images/crocodile.png" alt="crocodile-img">
+          <img class="croco" src="crocodile.png" alt="crocodile-img">
           <h3>Design & Development</h3>
           <p>I do not have much developing skills yet. But I am working on it very hard.</p>
         </div>
         <div class="skill-row">
-          <img class="blue" src="Images/Pngblue.png" alt="">
+          <img class="blue" src="Pngblue.png" alt="">
           <h3>Hobbies</h3>
           <p>Free of the coding time I like to cook and play with my cat Cookie. Sometimes I do run and play tennis.</p>
         </div>
