--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>I'am Dila.</h1>
       <h2>a newbie programmer.</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-      <img src="Images/mountain.png" alt="cloud-img">
+      <img src="mountain.png" alt="cloud-img">
     </div>
     <div class="middle-container">
       <div class="profile">
